<resources>
    <string name="app_name">Game of Thrones</string>
    <string name="item_name">John Doe</string>
    <string name="stab">lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</string>
    <string name="words">Words:</string>
    <string name="born">Born:</string>
    <string name="titles">Titles:</string>
    <string name="aliases">Aliases:</string>
    <string name="father">Father:</string>
    <string name="mother">Mother:</string>
</resources>